# cascade

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
distribution/: install.ps1  install.sh
distribution/homebrew/: cascade.rb
docs/: demo.tape  record-demo.sh
docs/superpowers/plans/: 2026-04-15-cascade-implementation.md
docs/superpowers/specs/: 2026-04-15-cascade-design.md
src/: achievements.rs  app.rs  cli.rs  config.rs  input.rs  lib.rs  main.rs  play_history.rs  score_store.rs  share.rs  stats.rs
src/audio/: analyzer.rs  import.rs  metadata.rs  mod.rs  player.rs  sfx.rs
src/beatmap/: generator.rs  loader.rs  mod.rs  types.rs
src/game/: effects.rs  highway.rs  hit_judge.rs  mod.rs  modifiers.rs  practice.rs  state.rs
src/screens/: calibrate.rs  gameplay.rs  menu.rs  mod.rs  results.rs  settings.rs  song_select.rs  stats.rs
src/ui/: chrome.rs  color.rs  highway_render.rs  hud.rs  mod.rs  pixel_buffer.rs  theme.rs  visualizer.rs  widgets.rs
tests/: beatmap_test.rs  cli_parse_test.rs  config_test.rs  game_test.rs  gameplay_time_scaling_test.rs  play_history_test.rs  share_test.rs  stats_test.rs  theme_test.rs
