[package]
name = "cascade"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rodio = { version = "0.20", features = ["mp3", "vorbis", "flac"] }
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac"] }
rustfft = "6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
